--- a/index.html
+++ b/index.html
@@ -5,52 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HPR Design</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
-        <img src="./content/HPR Logo-2.jpg" alt="Company Log">
+        <img src="./content/HPR Logo-2.jpg" alt="Company Log" class="logo">
         <h1>HPR Design</h1>
-        <nav>
-            <img src="./content/hamburger_menu_navbar_options_icon_196495.png" alt="Navbar Icon">
-        </nav>
+        <span class="material-symbols-outlined" style="font-size: 80px;" id="navbar">
+            menu
+        </span>
     </header>
     <main>
-        <h2>About me</h2>
-        <article>Coming from a lighting Design background, I started programming lights for big Operas and live Music festivals. Over 2.5 years ago I moved into webdesign, trying to create websites with the same aestheatic an Opera stage might have, and the same exciting a festival stage has.</article>
-        <img src="./content/Bewerbungsfoto - Henry Rehberg.jpg" alt="Picture of Henry Rehberg">
+        <h2 class="title" id="about-me">About me</h2>
+        <div id="main-wrapper">
+            <article>Coming from a lighting Design background, I started programming lights for big Operas and live Music festivals. 
+                <br>
+                Over 2.5 years ago I moved into webdesign, trying to create websites 
+                <br>
+                with the same aestheatic an Opera stage might have, and the same exciting a festival stage has.</article>
+            <img src="./content/Bewerbungsfoto - Henry Rehberg.jpg" alt="Picture of Henry Rehberg">
+        </div>
     </main>
     <aside>
-        <h2>Skills</h2>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" />
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" />
+        <h2 class="title">Skills</h2>
+        <div id="icon-wrapper">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" />
+        </div>
     </aside>
     <section>
-        <h2>Projects</h2>
-        <div>
-            <img src="./content/placeholder-image.png" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Project 1 Description Text</p>
-        </div>
-        <div>
-            <img src="./content/placeholder-image.png" alt="Project 1">
-            <h3>Project 2</h3>
-            <p>Project 2 Description Text</p>
-        </div>
-        <div>
-            <img src="./content/placeholder-image.png" alt="Project 1">
-            <h3>Project 3</h3>
-            <p>Project 3 Description Text</p>
+        <h2 class="title">Projects</h2>
+        <div id="section-wrapper">
+            <div class="projects">
+                <h3>Project 1</h3>
+                <p>Project 1 Description Text</p>
+            </div>
+            <div class="projects">
+                <h3>Project 2</h3>
+                <p>Project 2 Description Text</p>
+            </div>
+            <div class="projects">
+                <h3>Project 3</h3>
+                <p>Project 3 Description Text</p>
+            </div>
         </div>
     </section>
     <footer>
-      <img src="./content/HPR Logo-2.jpg" alt="Company Logo">
+      <img src="./content/HPR Logo-2.jpg" alt="Company Logo" class="logo">
       <p>Copyright reserved</p>  
     </footer>
+
+    <script src="./main.js"></script>
 </body>
 </html>
