--- a/index.html
+++ b/index.html
@@ -9,19 +9,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anta&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <img src="./content/HPR Logo-2.jpg" alt="Company Log" class="logo">
-        <h1>HPR Design</h1>
+        <h1 class="glass">HPR Design</h1>
         <span class="material-symbols-outlined" style="font-size: 80px;" id="navbar">
             menu
         </span>
+        <span class="material-symbols-outlined" style="font-size: 80px;" id="navbar-close">
+            close
+        </span>
+        <nav id="nav">
+            <ul>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Skills</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+                <li>
+                    <a href="./contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2 class="title" id="about-me">About me</h2>
         <div id="main-wrapper">
-            <article>Coming from a lighting Design background, I started programming lights for big Operas and live Music festivals. 
+            <article class="glass">Coming from a lighting Design background, I started programming lights for big Operas and live Music festivals. 
                 <br>
                 Over 2.5 years ago I moved into webdesign, trying to create websites 
                 <br>
@@ -32,14 +52,42 @@
     <aside>
         <h2 class="title">Skills</h2>
         <div id="icon-wrapper">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" />
+            <div class="icon-text" id="HTML">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" id="HTML-icon"/>
+                <p id="HTML-text">HTML</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+                <p>CSS</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+                <p>JavaScript</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+                <p>Python</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
+                <p>Git</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+                <p>Github</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" />
+                <p>LUA</p>
+            </div>
+            <div class="icon-text">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" />
+                <p>Markdown</p>
+            </div>
+
+
+
+
         </div>
     </aside>
     <section>
