Finished contact page, JS and style

--- a/index.html
+++ b/index.html
@@ -56,33 +56,33 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" id="HTML-icon"/>
                 <p id="HTML-text">HTML</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
-                <p>CSS</p>
+            <div class="icon-text" id="CSS">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" id="CSS-icon"/>
+                <p id="CSS-text">CSS</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
-                <p>JavaScript</p>
+            <div class="icon-text" id="JS">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" id="JS-icon"/>
+                <p id="JS-text">JavaScript</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-                <p>Python</p>
+            <div class="icon-text" id="Python">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" id="Python-icon"/>
+                <p id="Python-text">Python</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
-                <p>Git</p>
+            <div class="icon-text" id="Git">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" id="Git-icon"/>
+                <p id="Git-text">Git</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-                <p>Github</p>
+            <div class="icon-text" id="Github">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" id="Github-icon"/>
+                <p id="Github-text">Github</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" />
-                <p>LUA</p>
+            <div class="icon-text" id="LUA">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" id="LUA-icon"/>
+                <p id="LUA-text">LUA</p>
             </div>
-            <div class="icon-text">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" />
-                <p>Markdown</p>
+            <div class="icon-text" id="MD">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" id="MD-icon"/>
+                <p id="MD-text">Markdown</p>
             </div>
 
 
@@ -111,7 +111,7 @@
       <img src="./content/HPR Logo-2.jpg" alt="Company Logo" class="logo">
       <p>Copyright reserved</p>  
     </footer>
-
+    
     <script src="./main.js"></script>
 </body>
 </html>
