--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HPR Contact</title>
+    <link rel="stylesheet" href="./contact.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    
+    <header>
+        <img src="./content/HPR Logo-2.jpg" alt="Company Log" class="logo">
+        <h1 class="glass">HPR Design</h1>
+        <span class="material-symbols-outlined" style="font-size: 80px;" id="navbar">
+            menu
+        </span>
+        <span class="material-symbols-outlined" style="font-size: 80px;" id="navbar-close">
+            close
+        </span>
+        <nav id="nav">
+            <ul>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Skills</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+                <li>
+                    <a href="./contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Contact</h2>
+        <section class="flex">
+            <div class="left">
+                <h3>E-Mail</h3>
+                <h4>henry@HPR-lighting.com</h4>
+                <h3>Phone</h3>
+                <h4>+123 455678</h4>
+                <h3>Social Media</h3>
+                <div id="social-media">
+                    <img src="./content/icons8-facebook.svg" alt="Facebook Logo" id="facebook" class="icon">
+                    <img src="./content/icons8-instagram.svg" alt="Instagram Logo" id="instagram" class="icon">
+                    <img src="./content/icons8-linkedin.svg" alt="LinkedIn Logo" id="linkedin" class="icon">
+                    <img src="./content/icons8-github.svg" alt="Github Logo" id="github" class="icon">
+                </div>
+                </div>
+            <div class="right">
+                <img src="./content/IMG_2351 2.jpeg" alt="Henry operating Creamfields" id="contact-image">
+            </div>
+        </section>
+    </main>
+
+    <script src="./contact.js"></script>
 </body>
 </html>
