--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anta&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" href="./content/HPR Logo-2.jpg" type="image/jpg">
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
                 Over 2.5 years ago I moved into webdesign, trying to create websites 
                 <br>
                 with the same aestheatic an Opera stage might have, and the same exciting a festival stage has.</article>
-            <img src="./content/Bewerbungsfoto - Henry Rehberg.jpg" alt="Picture of Henry Rehberg">
+            <img src="./content/Bewerbungsfoto - Henry Rehberg.jpg" alt="Picture of Henry Rehberg" id="picture">
         </div>
     </main>
     <aside>
@@ -84,10 +85,6 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" id="MD-icon"/>
                 <p id="MD-text">Markdown</p>
             </div>
-
-
-
-
         </div>
     </aside>
     <section>
